@@ -77,7 +77,8 @@ if isfield(job,'nproc') && job.nproc>0 && (~isfield(job,'process_index'))
     % call matlab with command in the background
     if ispc
       % prepare system specific path for matlab
-      %export_cmd = ['set PATH=' fullfile(matlabroot,'bin')];
+      export_cmd = ['set PATH=' fullfile(matlabroot,'bin')];
+      [status,result] = system(export_cmd);
       system_cmd = ['start matlab -nodesktop -nosplash -r ' matlab_cmd ' -logfile ' log_name];
     else
       % -nodisplay .. nodisplay is without figure output > problem with CAT report ... was there a server problem with -nodesktop?
